--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>klyra-subscription tracker</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Klyra – Subscription Tracker</title>
+    <meta name="description" content="Klyra helps you manage, track, and optimize your subscriptions with ease." />
+    <meta name="author" content="Preetham Devulapally" />
 
-    <meta property="og:title" content="billwise-control-center" />
-    <meta property="og:description" content="Made by Preetham Devulapally" />
+    <meta property="og:title" content="Klyra – Subscription Tracker" />
+    <meta property="og:description" content="Manage all your subscriptions in one place. Stay on top of renewals, payments, and more with Klyra." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/logos/Klyra-official-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@klyra_app" />
+    <meta name="twitter:image" content="/images/logos/Klyra-official-logo.png" />
   </head>
 
   <body>
